name:                pure-marker
version:             0.8.0.0
homepage:            purehs.org/doc/pure-marker
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-marker.git

library
  build-depends:
    base,
    text,
    hashable,
    pure-random-pcg,
    pure-json,
    pure-time,
    pure-txt

  hs-source-dirs: src

  exposed-modules:
    Pure.Data.Marker

  default-language: Haskell2010
